syntax = "proto3";
package subscribers;

service SubscriberService {
  rpc GetAllSubscribers (GetAllSubscribersParams) returns (SubscribersResponse) {}
  rpc AddSubscriber (CreateSubscriberDto) returns (Subscriber) {}
}

message GetAllSubscribersParams {}

message Subscriber {
  oneof bar {
    int32 value = 1;
  }
}

message CreateSubscriberDto {
  string email = 1;
  string name = 2;
}

message SubscribersResponse {
  repeated Subscriber data = 1;
}
